--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@ tests/coverage_html/
 tests/.coverage
 build/
 tests/report/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
